--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Список книг</h2>
-    <form name="userForm">
+    <form name="bookForm">
         <input type="hidden" name="id" value="0" />
 
         <div class="form-group col-md-5">
@@ -63,7 +63,7 @@
                 headers: { "Accept": "application/json" }
             });
             if (response.ok === true) {
-                const user = await response.json();
+                const book = await response.json();
                 const form = document.forms["bookForm"];
                 form.elements["id"].value = book.id;
                 form.elements["name"].value = book.name;
@@ -102,7 +102,7 @@
                 })
             });
             if (response.ok === true) {
-                const user = await response.json();
+                const book = await response.json();
                 reset();
                 document.querySelector("tr[data-rowid='" + book.id + "']").replaceWith(row(book));
             }
